[tool.poetry]
name = "tsla-stock-price-scraper"
version = "0.1.0"
description = ""
authors = ["Krzysztof Szumny <noisy.pl@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
